# mobtennis

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: _helpers.py  admin.py  call_the_shot.py  digest.py  follows.py  h2h.py  match_follows.py  matches.py  name_the_pro.py  news.py  players.py  push.py  rankings.py  search.py  spot_the_ball.py  stream.py  tournaments.py  videos.py
backend/app/data/: tournament_records.py
backend/app/db/: session.py
backend/app/jobs/: scheduler.py
backend/app/models/: __init__.py  call_the_shot.py  digest.py  follow.py  match.py  match_follow.py  name_the_pro.py  news.py  player.py  player_image.py  (+5 more)
backend/deploy/: Caddyfile  README.md  SCHEDULED_JOBS.md  setup.sh  tennismob.service
backend/scripts/: apply_wiki_bracket.py  backfill_digests.py  dedupe_players.py  diagnose_live.py  enrich_career_highs.py  enrich_player_images.py  find_tournament_collisions.py  generate_digest_now.py  merge_tournament_aliases.py  migrate_spot_the_ball.py  parse_wiki_bracket.py  probe_news_feeds.py  probe_wiki_scrape.py  probe_ws.py  process_spot_the_ball_images.py  reconcile_tournament_dates.py  render_digest_video.py  repair_player_bios.py  sackmann_ingest.py  sackmann_matches_ingest.py  scan_player_image_faces.py  seed_call_the_shot.py  seed_player_career_highs.py  seed_spot_the_ball.py  seed_tournament_metadata.py  verify_provider.py
backend/tests/: conftest.py  test_api_tennis_provider.py  test_draws_wikipedia.py  test_matches_api.py
(+271 files in other folders)
