[project]
name = "tennismob-backend"
version = "0.1.0"
description = "Tennismob — fan-first tennis API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlmodel>=0.0.22",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "feedparser>=6.0",
  "python-slugify>=8.0",
  "tenacity>=9.0",
  # Editorial digest generator. Only used by app/services/editorial_digest.py
  # and the weekly cron job; if ANTHROPIC_API_KEY isn't set the generator
  # is a no-op, so the dep is dormant on deployments that don't run it.
  "anthropic>=0.45",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "httpx>=0.27",
]

# Explicit package list — without this, setuptools auto-discovery sees `app/`
# *and* `deploy/` (which holds Caddyfile + systemd unit) at the top level and
# bails with a flat-layout multi-package error.
[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
